acceptance/tests/fixtures/cases/custom-api-gateway/gateway/gateway.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1beta1
kind: Gateway
metadata:
  name: custom-gateway
spec:
  gatewayClassName: consul-custom #TODO: update to custom-gateway-class after updating the fixture
  listeners:
  - protocol: HTTPS
    port: 8080
    name: https
    tls:
      certificateRefs:
      - name: "certificate"
        namespace: "default"
    allowedRoutes:
      namespaces:
        from: "All"
