acceptance/tests/fixtures/cases/custom-api-gateway/gateway/kustomization.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

resources:
  - gateway.yaml
